fix spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
 @layer base {
   
   .layout-container {
-    padding: 2rem 1rem 0.5rem 1rem;
+    padding: 2rem 2rem 0.5rem;
     margin: 0 auto;
     background-color: var(--background-color);
     color: var(--text-color);
